# worldnotion

./: .gitattributes  .gitignore  .prettierignore  LICENSE.md  README.md  RELEASING.md  eslint.config.js  index.html  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
demo-universe/: Characters.md  Concepts.md  Items.md  Locations.md  Ridina Pemarik.md  Scenes.md
demo-universe/.everend/: taxonomy.yaml
demo-universe/Characters/: Kellan-Or.md  Mara-Voss.md  Sera-Nym.md
demo-universe/Concepts/: First-Road.md  Old-Roads.md  Resonance-Debt.md
demo-universe/Items/: Cinder-Lantern.md  Glass-Key.md  Iron-Meridian.md
demo-universe/Locations/: Ash-Gate.md  Ember-Cistern.md
demo-universe/Organizations/: Ashen-Choir.md  Glass-Cartographers.md
demo-universe/Scenes/: The-Basalt-Archive.md
demo-universe/Stories/: First-Road.md
docs/: ARCHITECTURE-NOTES.md  CODEMIRROR-INTEGRATION.md  MIGRATION-NOTES.md  MVP.md  PRODUCT_DIRECTION.md
docs/archive/: FONT-SELECTOR-IMPLEMENTATION.md  PHASE-2.5-REFACTOR-SUMMARY.md  PLUGIN_OPTIMIZATION_SUMMARY.md
examples/demo-vault/: README.md
src/: App.css  App.tsx  domain.ts  editorTypes.ts  feedback.ts  i18n.ts  index.css  settings.test.ts  settings.ts  suiteChrome.ts  themes.ts  vite-env.d.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: BacklinksPanel.tsx  BrandLoadingScreen.tsx  CanonChangesDialog.tsx  CodeMirrorEditor.tsx  CommandPalette.tsx  ConfirmDialog.tsx  ContextMenu.test.tsx  ContextMenu.tsx  DockWorkspace.tsx  (+52 more)
(+82 files in other folders)
